--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,8 +14,9 @@ header {
     left: 0;
 }
 header .logo {
-    font-size: 24px;
+    font-size: 40px;
     font-weight: bold;
+    color: #fff;
 }
 header .menu {
     width: 32px;
@@ -23,6 +24,7 @@ header .menu {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    cursor: pointer;
 }
 header .menu-line {
     height: 3px;
@@ -35,9 +37,51 @@ header .menu-line {
 }
 .container .left {
     flex: 1;
+    background-color: #3b576d;
+    display: flex;
+    align-items: center;
+    padding: 0px 32px;
+}
+.container .info {
+    color: #fff;
+}
+.container .info .profession {
+    font-size: 24px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+.container .info .name {
+    margin-top: 16px;
+    margin-bottom: 40px;
+    font-size: 64px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+.container .info .buttons a {
+    display: inline-block;
+    margin-right: 16px;
+    padding: 20px 40px;
+    background-color: #fff;
+    color: #3b576d;
+    font-size: 16px;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-decoration: none;
+    box-shadow: 0px 0px 10px #111;
+    border-radius: 4px;
+}
+.container .info .buttons a.light {
+    background-color: #3b576d;
+    color: #fff;
+}
+.container .info .buttons a:hover {
+    opacity: 0.8;
 }
 .container .right {
     flex: 1;
+    background-image: url('../images/hero.jpg');
+    background-position: center top;
+    background-size: cover;
 }
 
 footer {
@@ -45,4 +89,72 @@ footer {
     right: 0;
     bottom: 0;
     left: 0;
+    padding: 24px;
+    color: #fff;
+    font-size: 12px;
+    font-weight: bold;
+    line-height: 24px;
+}
+footer a {
+    color: #fff;
+}
+
+@media (max-width: 964px) {
+
+    header {
+        position: initial;
+        background-color: #3b576d;
+        padding: 16px;
+    }
+
+    header .menu-line {
+        background-color: #fff;
+    }
+
+    .container {
+        flex-direction: column;
+    }
+
+    .container .left {
+        flex: none;
+        justify-content: center;
+        padding: 32px 24px;
+        text-align: center;
+    }
+
+    .container .info .profession {
+        font-size: 20px;
+    }
+
+    .container .info .name {
+        font-size: 44px;
+    }
+     
+    footer {
+        position: initial;
+        background-color: #3b576d;
+        font-size: 16px;
+        text-align: center;
+    }
+}
+
+@media (max-width: 500px) {
+
+    .container .info .profession {
+        font-size: 16px;
+    }
+
+    .container .info .name {
+        font-size: 32px;
+    }
+
+    .container .info .buttons a {
+        display: block;
+        margin-right: 0px;
+        margin-bottom: 16px;
+    }
+
+    footer {
+        font-size: 14px;
+    }
 }
